syntax = "proto3";

package com.academy.fintech.origination;

option java_multiple_files = true;

service CancelApplicationService{
  rpc Cancel(CancelApplicationRequest) returns (CancelApplicationResponse) {}
}

message CancelApplicationRequest{
  string applicationId = 1;
}

message CancelApplicationResponse{
  string message = 1;
}
